add file scenne builder and structure mvc and initialistion of javafx